Working on edge profile finger pull

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-accessories-box/duraform-accessories-box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-accessories-box/duraform-accessories-box.component.html
@@ -5,8 +5,8 @@
         <div class="form__group">
           <label class="form__label">Edge Profile</label>
           <app-edge-profile-selector
+            [selectedDuraformDesign]="order.selectedDesign"
             [selectedEdgeProfile]="order.selectedEdgeProfile"
-            [canSelect]="!order.hasFixedEdgeProfile"
             (selectProfile)="onSelectProfile($event)"
           ></app-edge-profile-selector>
         </div>
