--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-design/duraform-design.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-design/duraform-design.component.html
@@ -15,7 +15,7 @@
   <div class="duraform-design__control-box">
     <div class="duraform-design__control-box__door-name">{{ design.name }}</div>
     <div class="duraform-design__control-box__profile-name">
-      {{ design.fixedEdgeProfileName || design.defaultEdgeProfileName }}
+      {{ design.defaultEdgeProfileName }}
     </div>
     <img
       class="duraform-design__control-box__profile-img"
