--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -23,10 +23,10 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ asset.getEdgeProfile(door.duraformEdgeProfileId).name | uppercase }}
     </td>
-    <td>{{ door.top ? "Y" : "" }}</td>
-    <td>{{ door.bottom ? "Y" : "" }}</td>
-    <td>{{ door.left ? "Y" : "" }}</td>
-    <td>{{ door.right ? "Y" : "" }}</td>
+    <td>{{ door.top ? "X" : "" }}</td>
+    <td>{{ door.bottom ? "X" : "" }}</td>
+    <td>{{ door.left ? "X" : "" }}</td>
+    <td>{{ door.right ? "X" : "" }}</td>
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ door.duraformOption?.toString() | uppercase }}
     </td>
