--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-tab/duraform-drawer-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-tab/duraform-drawer-tab.component.html
@@ -16,6 +16,7 @@
         Drawers
       </th>
       <th rowspan="2" style="width: 25rem">Drawer Type</th>
+      <th rowspan="2" style="width: 20rem">Edge Profile</th>
       <th colspan="4">'X' For Square Edge</th>
       <th rowspan="2" style="width: 7rem">
         Drill <br />
@@ -41,6 +42,7 @@
     (formSubmit)="onAddDrawer($event)"
   ></app-duraform-drawer-form>
   <tbody class="table__spacer" *ngIf="order.duraformDrawers.length > 0">
+    <td></td>
     <td></td>
     <td></td>
     <td></td>
