--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-one/duraform-order-step-one.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-one/duraform-order-step-one.component.html
@@ -5,6 +5,7 @@
   ></app-duraform-design-list>
   <app-edge-profile-menu
     *ngIf="showEdgeProfileMenu"
+    [selectedDuraformDesign]="selectedDuraformDesign"
     (selectProfile)="
       selectedEdgeProfile = $event;
       showEdgeProfileMenu = false;
