--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
@@ -23,6 +23,7 @@
         Extra Rail <br />
         Bottom
       </th>
+      <th rowspan="2" style="width: 20rem">Edge Profile</th>
       <th colspan="4">'X' For Square Edge</th>
       <th rowspan="2" style="width: 35rem">
         Option <br />
@@ -44,6 +45,7 @@
   ></app-pantry-door-form>
   <tbody class="table__spacer" *ngIf="order.pantryDoors.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
