--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-color-selector/duraform-color-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-color-selector/duraform-color-selector.component.html
@@ -11,9 +11,7 @@
                   {{ selectedEdgeProfile.name }}
                 </span>
                 <span *ngIf="!selectedEdgeProfile">
-                  {{
-                    design.fixedEdgeProfileName || design.defaultEdgeProfileName
-                  }}
+                  {{ design.defaultEdgeProfileName }}
                 </span>
               </div>
               <img
