--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-pantry-door-component-list/duraform-pantry-door-component-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-pantry-door-component-list/duraform-pantry-door-component-list.component.html
@@ -26,6 +26,7 @@
             Extra Rail <br />
             Bottom
           </th>
+          <th rowspan="2" style="width: 20rem">Edge Profile</th>
           <th colspan="4">'X' For Square Edge</th>
           <th rowspan="2" style="width: 26rem">Option</th>
           <th rowspan="2" style="width: 20rem">Hinge Hole</th>
@@ -49,6 +50,9 @@
             {{ asset.getChairRailType(pantryDoor.chairRailTypeId).name }}
           </td>
           <td>{{ pantryDoor.extraRailBottom }}</td>
+          <td class="text-left">
+            {{ asset.getEdgeProfile(pantryDoor.duraformEdgeProfileId).name }}
+          </td>
           <td>{{ pantryDoor.top ? "Y" : null }}</td>
           <td>{{ pantryDoor.bottom ? "Y" : null }}</td>
           <td>{{ pantryDoor.left ? "Y" : null }}</td>
