--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-form/end-panel-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-form/end-panel-form.component.html
@@ -13,23 +13,13 @@
       [formGroup]="formGroup"
     ></app-duraform-door-basic-input>
     <td>
-      <input
-        class="form__control"
-        currencyMask
-        appSelectOnFocus
-        formControlName="numberOfShields"
-        (blur)="numberOfShields.invalid && numberOfShields.setValue(2)"
-        [options]="{
-          align: 'center',
-          allowZero: false,
-          precision: '0',
-          decimal: '',
-          prefix: '',
-          thousands: '',
-          min: 1,
-          max: 5
-        }"
-      />
+      <app-select-menu
+        [control]="numberOfShields"
+        [values]="shields"
+        [valueKey]="'id'"
+        [valueDisplay]="'value'"
+        (afterSet)="onNumberOfShieldsChanged()"
+      ></app-select-menu>
     </td>
     <td>
       <input
@@ -45,13 +35,17 @@
           decimal: '',
           prefix: '',
           thousands: '',
-          max: 100
+          max: 200
         }"
       />
     </td>
     <td>
+      <span *ngIf="numberOfShields.value === 1"
+        ><b>{{ railCenter.value }}</b></span
+      >
       <input
         class="form__control"
+        *ngIf="numberOfShields.value > 1"
         currencyMask
         appSelectOnFocus
         formControlName="railCenter"
@@ -63,7 +57,7 @@
           decimal: '',
           prefix: '',
           thousands: '',
-          max: 100
+          max: 200
         }"
       />
     </td>
@@ -81,7 +75,7 @@
           decimal: '',
           prefix: '',
           thousands: '',
-          max: 100
+          max: 200
         }"
       />
     </td>
@@ -122,7 +116,6 @@
     <app-edge-profile-form-control
       appRemoveTag
       [formGroup]="formGroup"
-      [hideEdgeProfile]="true"
     ></app-edge-profile-form-control>
     <td>
       <app-duraform-option-selector
