--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-tab/end-panel-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-tab/end-panel-tab.component.html
@@ -17,6 +17,7 @@
       </th>
       <th colspan="3">Rail Sizes</th>
       <th colspan="2">Extra Rail</th>
+      <th rowspan="2" style="width: 20rem">Edge Profile</th>
       <th colspan="4">'X' For Square Edge</th>
       <th rowspan="2" style="width: 35rem">
         Option <br />
@@ -43,6 +44,7 @@
 
   <tbody class="table__spacer" *ngIf="order.endPanels.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
