Finished the open shelf option

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-basic-input/duraform-door-basic-input.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-basic-input/duraform-door-basic-input.component.html
@@ -30,6 +30,7 @@
       prefix: '',
       thousands: ''
     }"
+    (blur)="heightBlur.emit()"
     (keyup)="heightKeyUp.emit()"
   />
 </td>
@@ -47,6 +48,7 @@
       prefix: '',
       thousands: ''
     }"
+    (blur)="widthBlur.emit()"
     (input)="widthKeyUp.emit()"
   />
 </td>
