--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
@@ -35,6 +35,7 @@
     <app-edge-profile-form-control
       appRemoveTag
       [formGroup]="formGroup"
+      [componentType]="componentType"
     ></app-edge-profile-form-control>
     <td>
       <label class="form__checkbox">
