--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-option-double-sided-form/duraform-option-double-sided-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-option-double-sided-form/duraform-option-double-sided-form.component.html
@@ -1,6 +1,6 @@
 <div
   class="duraform-option-double-sided-form option-form__form-wrapper"
-  [formGroup]="formGroup.get('optionGroup')"
+  [formGroup]="optionGroup"
 >
   <label class="form__radio-btn">
     <input
