--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -31,6 +31,7 @@
 @import "./3-component/duraform-option-selector";
 @import "./3-component/duraform-option-double-sided-form";
 @import "./3-component/duraform-option-pane-frame-form";
+@import "./3-component/duraform-option-angled-shelf-form";
 @import "./3-component/badge";
 @import "./3-component/latest-items";
 @import "./3-component/component-list";
