Finished pricing stage 1

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -36,6 +36,9 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ door.note }}
     </td>
+    <td>
+      {{ door.price | currency }}
+    </td>
     <td style="width: 5rem">
       <button
         type="button"
