--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-tab/duraform-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-tab/duraform-door-tab.component.html
@@ -18,7 +18,8 @@
         (eg. No Face, Fold Back, ...)
       </th>
       <th rowspan="2" style="width: 20rem">Hinge Hole</th>
-      <th rowspan="2" colspan="2">Note</th>
+      <th rowspan="2">Note</th>
+      <th rowspan="2" colspan="2">Price</th>
     </tr>
     <tr>
       <th style="width: 4rem">T</th>
@@ -33,6 +34,7 @@
   ></app-duraform-door-form>
   <tbody class="table__spacer" *ngIf="order.duraformDoors.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
