--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-tab/duraform-drawer-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-tab/duraform-drawer-tab.component.html
@@ -23,7 +23,8 @@
         Fronts
       </th>
       <th colspan="5">Drawer Size</th>
-      <th rowspan="2" colspan="2">Note</th>
+      <th rowspan="2">Note</th>
+      <th rowspan="2" colspan="2">Price</th>
     </tr>
     <tr>
       <th style="width: 4rem">T</th>
@@ -42,6 +43,7 @@
     (formSubmit)="onAddDrawer($event)"
   ></app-duraform-drawer-form>
   <tbody class="table__spacer" *ngIf="order.duraformDrawers.length > 0">
+    <td></td>
     <td></td>
     <td></td>
     <td></td>
