--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-tab/end-panel-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-tab/end-panel-tab.component.html
@@ -23,7 +23,8 @@
         Option <br />
         (eg. No Face, Fold Back, ...)
       </th>
-      <th rowspan="2" colspan="2">Note</th>
+      <th rowspan="2">Note</th>
+      <th rowspan="2" colspan="2">Price</th>
     </tr>
     <tr>
       <th style="width: 6rem">Left</th>
@@ -44,6 +45,7 @@
 
   <tbody class="table__spacer" *ngIf="order.endPanels.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
