--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
@@ -39,6 +39,9 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ pantryDoor.note }}
     </td>
+    <td>
+      {{ pantryDoor.price | currency }}
+    </td>
     <td style="width: 5rem">
       <button
         type="button"
