--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
@@ -82,7 +82,7 @@
         formControlName="note"
       />
     </td>
-    <td style="width: 5rem">
+    <td colspan="2" style="width: 5rem">
       <button
         [disabled]="formGroup.invalid"
         type="button"
