--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
@@ -30,7 +30,8 @@
         (eg. No Face, Fold Back, ...)
       </th>
       <th rowspan="2" style="width: 20rem">Hinge Hole</th>
-      <th rowspan="2" colspan="2">Note</th>
+      <th rowspan="2">Note</th>
+      <th rowspan="2" colspan="2">Price</th>
     </tr>
     <tr>
       <th style="width: 4rem">T</th>
@@ -45,6 +46,7 @@
   ></app-pantry-door-form>
   <tbody class="table__spacer" *ngIf="order.pantryDoors.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
