--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
@@ -42,6 +42,7 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ duraformDrawer.note }}
     </td>
+    <td>{{ duraformDrawer.price | currency }}</td>
     <td style="width: 5rem">
       <button
         type="button"
