--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-cart-item/end-panel-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-cart-item/end-panel-cart-item.component.html
@@ -37,6 +37,9 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ endPanel.note }}
     </td>
+    <td>
+      {{ endPanel.price | currency }}
+    </td>
     <td style="width: 5rem">
       <button
         type="button"
